[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "types-mujoco"
version = "0.1.0"

[tool.setuptools]
packages = ["mujoco"]
include-package-data = true

[tool.setuptools.package-data]
"mujoco" = ["*.pyi"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
